pie chart fully implemented

--- a/lib/projects.json
+++ b/lib/projects.json
@@ -30,8 +30,8 @@
         "description": "Molestiae modi id ut aperiam, quae doloribus, aut incidunt blanditiis veniam at impedit delectus minus numquam quis ad magnam ipsum non, repellendus ab! Id cupiditate exercitationem recusandae, in ipsam reprehenderit."
     },
     {
-        "title": "Necessitatibus magni aliquid vero.",
-        "year": "2023",
+        "title": "DSC 106 Project 2",
+        "year": "2025",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Commodi sequi nostrum vitae eos impedit, suscipit facere, aut numquam nesciunt eligendi animi. Non repellendus placeat impedit eaque quam recusandae rerum sit similique accusamus maxime, molestias a ex fuga minus!"
     },
